<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="8dp"
    android:text="@string/cat_animation_type_title" />

  <com.google.android.material.button.MaterialButtonToggleGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    app:checkedButton="@+id/type_alpha"
    app:selectionRequired="false"
    app:singleSelection="true">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/type_alpha"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="1dp"
      android:text="@string/cat_animation_type_alpha" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/type_scale"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:padding="1dp"
      android:text="@string/cat_animation_type_scale" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/rotateBtn"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:padding="1dp"
      android:text="@string/cat_animation_type_rotate" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/type_translate"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:padding="1dp"
      android:text="@string/cat_animation_type_translate" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/type_set"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="1dp"
      android:text="@string/cat_animation_type_set" />
  </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>
