<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="8dp"
    android:text="@string/cat_animation_repeat_model_title" />

  <com.google.android.material.button.MaterialButtonToggleGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="8dp"
    app:singleSelection="true">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/infiniteBtn"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/cat_animation_repeat_model_infinite" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/restartBtn"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/cat_animation_repeat_model_restart" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/reverseBtn"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/cat_animation_repeat_model_reverse" />
  </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>
