<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/img"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/anim_frame"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/startAnim"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cat_animation_btn_start_anim"
    app:layout_constraintBottom_toTopOf="@+id/img"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/stopAnim"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/cat_animation_btn_stop_anim"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/startAnim" />

  <com.google.android.material.materialswitch.MaterialSwitch
    android:id="@+id/oneShot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:checked="false"
    android:enabled="false"
    android:text="@string/cat_animation_btn_oneshot"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/useCode" />

  <com.google.android.material.materialswitch.MaterialSwitch
    android:id="@+id/useCode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:checked="false"
    android:text="@string/cat_animation_btn_use_code"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/img" />

</androidx.constraintlayout.widget.ConstraintLayout>
