<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      android:text="@string/cat_anim_shared_config_repeat_model_title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      app:checkedButton="@+id/repeat_restart"
      app:selectionRequired="true"
      app:singleSelection="true">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/repeat_restart"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_anim_shared_config_repeat_model_restart" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/repeat_reverse"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_anim_shared_config_repeat_model_reverse" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
  </LinearLayout>

</merge>
